--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
+### Python ###
+# Byte-compiled / optimized / DLL files
+__pycache__/
+
+# Environments
+.venv
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+# !.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Ignore all local history of files
+.history
+
+### Anastellos ###
+# Ignore specific files
 ign_*
 __ign_*
-__pycache__
-/.vscode
-*.code-workspace
